MDEV-5438 A view can mask a table that supports discovery